--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">MORE PLAY LIST</button>
         <div id="myDropdown" class="dropdown-content">
-          <a href="https://amarragu.github.io/AVMusic2/">AV MUSIC 1</a>
-          <a href="https://amarragu.github.io/AVMusic1/">AV MUSIC 2</a>
+          <a href="https://vaithemusic.github.io/AVMusic2/">Vaithe Fav List 1</a>
+          <a href="https://Vaithemusic.github.io/AVMusic1/">Vaithe Fav list 2</a>
         </div>
       </div>
     </div>
