--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="wrapper">
     <div class="top-bar">
-      <span>Now Playing Vaithe Fav <center> Music</center>center></span>
+      <span>Now Playing Vaithe Fav <center> 💜 Music 💙 </center></span>
       <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">MORE PLAY LIST</button>
         <div id="myDropdown" class="dropdown-content">
