--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">MORE PLAY LIST</button>
         <div id="myDropdown" class="dropdown-content">
-          <a href="https://amar0th05.github.io/AVMusic1/">Vaithe Fav List 1</a>
-          <a href="https://amar0th05.github.io/AVMusic2/">Vaithe Fav list 2</a>
+          <a href="https://amar0th05.github.io/AVMusic1/">Fav List 1</a>
+          <a href="https://amar0th05.github.io/AVMusic2/">Fav list 2</a>
         </div>
       </div>
     </div>
